force-app/main/default/objects/CourseCalendarConfig__mdt/CourseCalendarConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Course Calendar LWC.</description>
    <label>Course Calendar Config</label>
    <pluralLabel>Course Calendar Configs</pluralLabel>
</CustomObject>