force-app/main/default/objects/CourseCalendarConfig__mdt/fields/Grid_End_Hour__c.field-meta.xml
<CustomField>
    <fullName>Grid_End_Hour__c</fullName>
    <label>Grid End Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>