force-app/main/default/objects/CourseCalendarConfig__mdt/fields/Height_Pixels__c.field-meta.xml
<CustomField>
    <fullName>Height_Pixels__c</fullName>
    <label>Height (Pixels)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>