force-app/main/default/objects/CourseCalendarConfig__mdt/fields/Palette__c.field-meta.xml
<CustomField>
    <fullName>Palette__c</fullName>
    <label>Palette</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>